<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/review"
            android:background="#009688" />

        <Button
            android:id="@+id/btnData"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/data"
            android:background="#009688" />

        <Button
            android:id="@+id/btnSolution"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/solution"
            android:background="#009688" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/buttons"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/sqrt"
            android:id="@+id/sqrtbtn"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/pow"
            android:id="@+id/powbtn"
            android:layout_alignParentBottom="true"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/count"
            android:id="@+id/magic"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/jeden"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dwa"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" a: "
                        android:id="@+id/textView24"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/a"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webA"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" b: "
                        android:id="@+id/textView27"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/b"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webB"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" c: "
                        android:id="@+id/textView28"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/c"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webC"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" d: "
                        android:id="@+id/textView29"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/d"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webD"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" e: "
                        android:id="@+id/textView30"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/e"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webE"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" f: "
                        android:id="@+id/textView31"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/f"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webF"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" g: "
                        android:id="@+id/textView32"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/g"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webG"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="75dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=" h: "
                        android:id="@+id/textView33"
                        android:layout_gravity="center_vertical" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/h"
                            android:layout_weight="1"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <WebView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/webH"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <WebView
            android:id="@+id/webSolution"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>